chore: update maven-javadoc-plugin configuration in pom.xml to exclude module-info.java and add additional JOptions