@@ -130,6 +130,13 @@
                     <encoding>UTF-8</encoding>
                     <doclint>none</doclint>
                     <show>private</show>
+                    <sourceFileExcludes>
+                        <exclude>**/module-info.java</exclude>
+                    </sourceFileExcludes>
+                    <additionalJOptions>
+                        <additionalJOption>--add-reads</additionalJOption>
+                        <additionalJOption>sae.transport.comparison=ALL-UNNAMED</additionalJOption>
+                    </additionalJOptions>
                 </configuration>
             </plugin>
             <plugin>
